[package]
name = "aspen-s3"
version = "0.1.0"
edition = "2021"
authors = ["Aspen Contributors"]
description = "S3-compatible API server for Aspen distributed storage"
license = "MIT OR Apache-2.0"

[[bin]]
name = "aspen-s3"
path = "aspen-s3.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.38", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# S3 API implementation
s3s = "0.11"
s3s-aws = "0.11"

# HTTP server
hyper = { version = "1.0", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["server", "tokio", "client", "client-legacy"] }
http-body-util = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Data encoding
base64 = "0.22"
md5 = "0.7"

# Date/time
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# Error handling
snafu = "0.8"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Testing
proptest = { version = "1.6", optional = true }

[dev-dependencies]
tempfile = "3.8"
proptest = "1.6"

[features]
default = []
test-utils = ["proptest"]

# TODO: Replace this with actual Aspen KV store dependency
# For now, we'll need to create a trait that both projects can share